...
        ItemBox.fromFeedItem(catalogItem, DefaultCurrencyFormatter())
    }

    Box(
        modifier = Modifier
            .fillMaxSize()
            .testTag("item_details_container"),
    ) {
        Column(
            modifier = Modifier
                .fillMaxSize()
                .verticalScroll(rememberScrollState()),
        ) {
...
                ) {
                    IconButton(
                        onClick = {
                            isFavorite = !isFavorite
                            viewModel.toggleFavoritePersist(state.itemBox.itemId)
                        },
                        modifier = Modifier.testTag("button_favorite"),
                    ) {
                        Icon(
                            painter = painterResource(
                                if (isFavorite) R.drawable.ic_favorite else R.drawable.ic_unfavorite,
                            ),
                            contentDescription = null,
...
