...
    item: ItemBox,
) {
    Column(
        modifier = Modifier
            .padding(4.dp)
            .fillMaxWidth()
            .testTag("feed_item"),
    ) {
        GlideImage(
            model = item.mainPhoto?.url,
            contentDescription = null,
            modifier = Modifier
                .fillMaxWidth()
...
